--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "next": "15.5.0",
+    "framer-motion": "^11.15.0",
+    "zod": "^3.25.0",
+    "lucide-react": "^0.469.0"
   },
   "devDependencies": {
     "typescript": "^5",
